@@ -13,6 +13,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Update the CSS style
 - phoromatic: Add support for the main administrator to create multiple users associated with the same account
 - phoromatic: Add support for "viewer accounts" where they can view data but not alter/write data
+- phoromatic: Fix for adding systems to groups
 
 Phoronix Test Suite 5.4 Milestone 2
 5 October 2014
